--- a/src/main/resources/assets/nock_enough_arrows/lang/en_us.json
+++ b/src/main/resources/assets/nock_enough_arrows/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "itemGroup.quiver": "Nock Enough Arrows",
   "container.fletch": "Fletch Arrows",
+  "key.nock_enough_arrows.switch_arrow_key": "Switch Arrow",
 
   "item.nock_enough_arrows.quiver": "Quiver",
 
