--- a/src/main/resources/assets/nock_enough_arrows/lang/en_us.json
+++ b/src/main/resources/assets/nock_enough_arrows/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.quiver": "Nock Enough Arrows",
   "container.fletch": "Fletch Arrows",
   "key.nock_enough_arrows.switch_arrow_key": "Switch Arrow",
+  "gui.jei.fletching": "Fletching",
 
   "item.nock_enough_arrows.quiver": "Quiver",
 
